[BlinkGenPropertyTrees] Collect non-drawing layers for hit testing

Some non-drawing layers need to be collected for hit testing. For
example, if there's a composited animation on an empty div, we still
need to create a composited layer for the purposes of hit testing.

Bug: 870728

Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ibbf8bcd60242b901db9b35821450111d4a7c5d63
Reviewed-on: https://chromium-review.googlesource.com/1180464
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584267}
Former-commit-id: c1637af74a1ab9edb3d254f90b24eb46bc207e96